integrations/ob1/k8s/minio-s3-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: minio-s3-nodeport
  namespace: openbrain
spec:
  type: NodePort
  selector:
    app: minio
  ports:
    - name: s3
      port: 9000
      targetPort: 9000
      nodePort: 30900
